[gd_scene load_steps=10 format=3 uid="uid://cqdsxxxq3ou7m"]

[ext_resource type="Script" path="res://scripts/health.gd" id="1_4scp3"]
[ext_resource type="Texture2D" path="res://assests/characters/item/health.png" id="2_ltjg3"]
[ext_resource type="AudioStream" path="res://assests/music/Item drop/powerUp.wav" id="3_2jwky"]

[sub_resource type="Animation" id="Animation_awc66"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3.54, 3.54)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../health_shadow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_euyxe"]
resource_name = "health_hover"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.43333334, 0.93333334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1.345), Vector2(0, 1.12)]
}

[sub_resource type="Animation" id="Animation_rvv76"]
resource_name = "health_spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.43333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.925, 0.925), Vector2(3.54, 3.54)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.23333333, 0.43333334),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-2, 0), Vector2(-2, 0), Vector2(-2, 8.405), Vector2(-2, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.033333335),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../health_shadow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.26666668),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_r14av"]
resource_name = "health_taken"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.43333334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-2, 0), Vector2(-2, -10.775), Vector2(-0.49, -21.775)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.43333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3.54, 3.54), Vector2(0.645, 0.645)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.43333334),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../health_shadow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r14av"]
_data = {
&"RESET": SubResource("Animation_awc66"),
&"health_hover": SubResource("Animation_euyxe"),
&"health_spawn": SubResource("Animation_rvv76"),
&"health_taken": SubResource("Animation_r14av")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_n78qv"]
radius = 31.016125

[node name="health" type="Area2D"]
rotation = 0.00090108387
script = ExtResource("1_4scp3")

[node name="health_image" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.8117647)
z_index = 6
scale = Vector2(3.54, 3.54)
texture = ExtResource("2_ltjg3")

[node name="animation" type="AnimationPlayer" parent="health_image"]
libraries = {
&"": SubResource("AnimationLibrary_r14av")
}
autoplay = "health_hover"

[node name="collect" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(3, -4)
shape = SubResource("CircleShape2D_n78qv")

[node name="health_shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.8117647)
self_modulate = Color(0, 0, 0, 0.40784314)
z_index = 6
position = Vector2(-0.9774724, 25.000889)
scale = Vector2(3.1353283, 0.50522995)
texture = ExtResource("2_ltjg3")

[node name="collect_item" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_2jwky")
volume_db = -2.735

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="health_image/animation" to="." method="_on_animation_animation_finished"]
